hero inventory handeling changes